# ackermann_robot

./: README.md  setup.py
ackermann_robot/: ackermann_driver.py  cmd_odom_diff.py  cmd_vel_bridge.py  footprint_publisher.py  ps4_teleop.py
config/: ackermann_driver.yaml  explore_params.yaml  nav2_params.yaml  navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml  slam_toolbox_online_async.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_robot/lib/ackermann_robot/: ackermann_driver  ps4_teleop
install/ackermann_robot/share/ackermann_robot/: package.sh  package.xml
install/ackermann_robot/share/ackermann_robot/config/: nav2_params.yaml  slam_toolbox_online_async.yaml
install/ackermann_robot/share/ackermann_robot/launch/: bringup.launch.py  ld19_rf2o.launch.py  navigation.launch.py
launch/: auto_explore.launch.py  autonomy.launch.py  bringup.launch.py  explore.launch.py  ld19_rf2o.launch.py  localization.launch.py  navigation.launch.py  slam_nav.launch.py  teleop.launch.py
log/: latest_build
