<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luky@todo.todo">luky</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ldlidar_stl_ros2</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
